@@ -15,6 +15,7 @@
 * Dev - Metadata: term “duration” added to duration meta
 * Fix - Fixed the default pagination from LSX
 * Fix - Facilities without child items can't display
+* Fix - Fixed styles from post meta details on banner
 
 ### 1.0.4
 * Removed the last of the LSX_TO_POSTEXPIRATOR_TYPES constants
